build: update dependencies
- Update NetSparkleUpdater.SparkleUpdater from 2.3.0-preview20230704001 to 3.0.4
 - Removed ShowsUIOnMainThread as it is deprecated
 - Removed SecurityProtocolType as it is deprecated, HttpClient should automatically use highest TLS available on .NET 9+
- Update NetSparkleUpdater.UI.Avalonia from 3.0.0-preview20230703001 to 3.0.4
- Switch from Markdown.Avalonia to ClassIsland.Markdown.Avalonia as it is unmaintained
 - Add custom path resolver for markdown renderer to avoid uncaught exceptions due to relative urls in readmes

--- a/Lumafly/Views/Windows/ReadmePopup.axaml
+++ b/Lumafly/Views/Windows/ReadmePopup.axaml
@@ -33,7 +33,7 @@
             Grid.Row="1"
             Markdown="{Binding Readme}" 
             Margin="30 0"
-            />
+            Name="MarkdownViewer" />
         
         <Button 
             HotKey="Ctrl+W"
